#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.77 released.

        * Added tests to find gzip, tar and make for cygwin in
          Makefile.PL


2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.76 released.

        * Changed bash -ic to bash -lc for cygwin setup in
          Makefile.PL

        * Fixed uniq capture

        * Added override package for LWP::UserAgent to improve
          compatibility with older CPAN installations


2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.75 released.

        * Added BerkeleyDB::Manager to "requires" list in
          Makefile.PL


2010-11-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.74 released.

        * Removed LWP::UserAgent->config in Makefile.PL


2010-11-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.73 released.

        * Changed CPAN::LWP::UserAgent to just LWP::UserAgent
          in Makefile.PL


2010-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.72 released.

        * added module requirements for Term::Menus to
         "requires" list for Windows installations.


2010-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.71 released.

        * Fixed small bug in Makefile.PL.

        * Added error message informing user of necessary
          permission requirements when writable directory
          is not located during FullAuto initialization.


2010-11-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
