@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.77';
+our $VERSION='0.78';
 
 
 use 5.005;
