@@ -25,6 +25,14 @@
 ################################################################
 
 
+2010-12-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.78 released.
+
+        * Added ncurses and libdb4.5-devel to Cygwin install
+          in Makefile.PL
+
+
 2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.77 released.
